--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         <p>My second chart looks at productivity in the UK</p>
         <div class="chart" id="Chart2"> </div>
     </div> 
+    
+    <div class="myWeek2"
+        <h3>Week 2 Homework</h3>
+        <p>Paragraph</p>
+        <div class="chart" id="Chart3"></div>
+    </div>
 </body>
 
 
