--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <p>paragraph</p>
         <div class="chart" id="Chart4"></div>
 
+        <h3>Week 3 Homework</h3>
+        <p>Week 3 Homework</p>
+        <div class="chart" id="Chart5"></div>
+
         </h3>
     </div> 
 </body>
@@ -56,12 +60,14 @@
     var myChart2 = "week1/chart4_electrictygenerationUK.json";
     var myChart3 = "week2/IMF_lending_outstanding.json";
     var myChart4 = "week2/adj.json";
+    var myChart5 = "week3/MaturityYield.vl.json"
 
     // Embed charts:
     vegaEmbed('#Chart1', myChart1);
     vegaEmbed('#Chart2', myChart2);
     vegaEmbed('#Chart3', myChart3);
     vegaEmbed('#Chart4', myChart4);
+    vegaEmbed('#Chart5', myChart5);
 </script>
 
 </html>
