--- a/project.html
+++ b/project.html
@@ -54,9 +54,9 @@
 <script>
     //Define charts:
     var PChart1 = "Project/WorldKWH.json";
-    var PChart2 = "week9/GDPkwH.json";
+    var PChart2 = "Project/GDPkwH.json";
     var PChart3 = "Week10/Regression_FossilGDP.json";
-    var PChart4 = "week9/Trellis.json";
+    var PChart4 = "Project/Trellis.json";
     var PChart5 = "week3/Top5Emissions1.json";
 
     vegaEmbed('#Chart1', PChart1);
