--- a/portfolio.html
+++ b/portfolio.html
@@ -189,7 +189,7 @@
     var myChart18 = "week7/HousePrice.json";
     var myChart19 = "week8/BTCprice.json";
     var myChart20 = "week8/BTCsearch.json";
-    var myChart21 = "Project/GDPkWh.json";
+    var myChart21 = "Project/GDPkwH.json";
     var myChart22 = "Project/Trellis.json";
     var myChart23 = "Week10/Regression_FossilGDP.json"
 
