--- a/portfolio.html
+++ b/portfolio.html
@@ -149,17 +149,17 @@
             </p>
             <div class="chart" id="Chart23"></div>
             <p>Screenshot of Colab graph before restricting domain (Rsq=0.0018). I did this due to the skew from countries such as Qatar ("exceptional" access to fossil fuels, very high GDP)</p>
-            <img src ="week10/ColabRegression.png" height="360" width="580">
+            <img src ="Week10/ColabRegression.png" height="360" width="580">
 
             <h3>Unsupervised Learning</h3>
             <p>
               I used daily average (Farenheit) temperatures from 1950 to 2022 at Heathrow on the hypothesis that, with global warming, we would see years chronoligcally close to each other being clustered together. 
             </p>
-            <img src = "week10/TimeSeries.png" height="300" width="400">
+            <img src = "Week10/TimeSeries.png" height="300" width="400">
             <p>
                 The results aren't surprising, with only three years since 2000 in the right two clusters that seem to correspond to cooler year clusters. I was surprised that none of the five hottest years were directly grouped together, which goes to show they must have had varying warmer periods during their respective years.
             </p>
-            <img src = "week10/Dendogram.png" height="400" width="700">
+            <img src = "Week10/Dendogram.png" height="400" width="700">
 
         </div>
         </h3>
@@ -191,7 +191,7 @@
     var myChart20 = "week8/BTCsearch.json";
     var myChart21 = "Project/GDPkWh.json";
     var myChart22 = "Project/Trellis.json";
-    var myChart23 = "week10/Regression_FossilGDP.json"
+    var myChart23 = "Week10/Regression_FossilGDP.json"
 
     // Embed charts:
     vegaEmbed('#Chart1', myChart1);
