--- a/project.html
+++ b/project.html
@@ -96,6 +96,10 @@
         <div class="containerButton">
             <button class="button4" onclick="location.href = 'https://colab.research.google.com/drive/1fj1lemAhGpXAC3zQBl2GJ8p-yXo3aEj0?authuser=1'">Colab</button>
         </div>   
+        <p> Lastly, I wanted to demonstrate the increased availability of renewable electricity and the falling costs associated with them. I chose to look at solar panels due to their ease of setup, 
+            as well as many developing countries being focused around the equator where sunlight is readily available. 
+            I scraped Wikipedia to get the data on solar panel generation in the UK, and then merged it with data in csv form on estimated costs for solar panels from OurWorldInData and created a secondary axis in Vega. 
+        </p>
         
     </div>
     <div class="Proj3">
