--- a/project.html
+++ b/project.html
@@ -103,6 +103,8 @@
         
     </div>
     <div class="Proj3">
+        <h2>Human Factors</h2>
+        <p></p>
     </div>
     
     </container>
