--- a/project.html
+++ b/project.html
@@ -105,6 +105,10 @@
     <div class="Proj3">
         <h2>Human Factors</h2>
         <p></p>
+        <div class="chart" id="Chart6"></div>
+        <div class="containerButton">
+            <button class="button4" onclick="location.href = 'https://colab.research.google.com/drive/1-RVm_22GO2XGA6k5g5VCtkWFWXqTV0CE?authuser=1'">Colab</button>
+        </div> 
     </div>
     
     </container>
@@ -120,12 +124,14 @@
     var PChart3 = "Week10/Regression_FossilGDP.json";
     var PChart4 = "Project/Trellis.json";
     var PChart5 = "Project/Solar.json";
+    var PChart6 = "Project/LEPollutionReg.json";
 
     vegaEmbed('#Chart1', PChart1);
     vegaEmbed('#Chart2', PChart2);
     vegaEmbed('#Chart3', PChart3);
     vegaEmbed('#Chart4', PChart4);
     vegaEmbed('#Chart5', PChart5);
+    vegaEmbed('#Chart6', PChart6);
 
 </script>
 </html>
