--- a/project.html
+++ b/project.html
@@ -109,6 +109,12 @@
         <div class="containerButton">
             <button class="button4" onclick="location.href = 'https://colab.research.google.com/drive/1-RVm_22GO2XGA6k5g5VCtkWFWXqTV0CE?authuser=1'">Colab</button>
         </div> 
+        <p></p>
+        <div class="chart" id="Chart7"></div>
+        <div class="containerButton">
+            <button class="button4" onclick="location.href = 'https://colab.research.google.com/drive/1jJCyt0T6pBLXGMwhurPNU4_cbOUr8j9C?authuser=1'">Colab</button>
+        </div> 
+        
     </div>
     
     </container>
@@ -125,6 +131,7 @@
     var PChart4 = "Project/Trellis.json";
     var PChart5 = "Project/Solar.json";
     var PChart6 = "Project/LEPollutionReg.json";
+    var PChart7 = "Project/WeatherEvents.json";
 
     vegaEmbed('#Chart1', PChart1);
     vegaEmbed('#Chart2', PChart2);
@@ -132,6 +139,7 @@
     vegaEmbed('#Chart4', PChart4);
     vegaEmbed('#Chart5', PChart5);
     vegaEmbed('#Chart6', PChart6);
+    vegaEmbed('#Chart7', PChart7);
 
 </script>
 </html>
