--- a/project.html
+++ b/project.html
@@ -104,12 +104,18 @@
     </div>
     <div class="Proj3">
         <h2>Human Factors</h2>
-        <p></p>
+        <p>Developing countries may also wish to consider the impact using fossil fuels have on their populations. 
+            The regression below shows the weak association (0.18) between concentration of pollution levels in cities and the life expectancy of the population.</p>
         <div class="chart" id="Chart6"></div>
         <div class="containerButton">
             <button class="button4" onclick="location.href = 'https://colab.research.google.com/drive/1-RVm_22GO2XGA6k5g5VCtkWFWXqTV0CE?authuser=1'">Colab</button>
         </div> 
-        <p></p>
+        <p>Again, I used a loop to append data from the WorldBank API to a DataFrame made from data in CSV form from the WHO, creating the graph in Vega.
+        </p>
+        <p>With climate change, it is well known that natural disasters such as floods and droughts are expected to increase. 
+           What’s more, these disasters are likely to disproportionately affect developing countries due to their geographical locations. 
+           This stacked bar chart uses data from OurWorldInData to show how the number of people affected per capita by such events has increased in recent decades. 
+        </p>
         <div class="chart" id="Chart7"></div>
         <div class="containerButton">
             <button class="button4" onclick="location.href = 'https://colab.research.google.com/drive/1jJCyt0T6pBLXGMwhurPNU4_cbOUr8j9C?authuser=1'">Colab</button>
@@ -119,7 +125,9 @@
     
     <div class="Proj4">
         <h2>Conclusion</h2>
-        <p></p>
+        <p>In conclusion, the increased availability of data surrounding the negative impacts of climate change and favourable economic conditions towards the transition to renewable energy would suggest developing countries should favour the use of renewable energy. 
+            However, this evidence is far from conclusive and looking forward work should be done on how developed nations can support energy demands through renewable means of developing nations to avoid a climate catastrophe.
+        </p>
     
     </container>
 
