--- a/project.html
+++ b/project.html
@@ -30,7 +30,7 @@
     
     <container class="containerx">
     
-    <div class="ProjHeader">
+    <div class="PageHeader">
     <h1>Project</h1>
     <h2>How could recent economic and human factors influence renewable electricity generation in developing countries?</h2>
     </div>
