--- a/portfolio.html
+++ b/portfolio.html
@@ -29,8 +29,10 @@
         <button class="button1" onclick="window.location.href = 'project.html'">Project</button>
         <button class="button1" onclick="location.href = 'https://github.com/JamesOldham11/JamesOldham11.github.io'">GitHub</button>
     </div>
-  
+    
+   <div class="PageHeader">
    <h1>Portfolio</h1>
+   </div>
 
     <div class="container">
         
