--- a/portfolio.html
+++ b/portfolio.html
@@ -130,9 +130,12 @@
             <h2>Week 9 Homework</h2>
             <h3>Advanced Charts</h3>
             <p>Created for use in my Project</p>
+            <p>
+                <a href="https://colab.research.google.com/drive/10FcwkN9f1ExL6hrMBw9VKtHLdLC9VJFg?authuser=1'>Colab 1</a>
+            </p>
             <div class="chart" id="Chart21"></div>
-            <p>b 
-                <a href="https://colab.research.google.com/drive/1QmVb4-bCPeYsy09S1cZ6pjbBVrWGwqO3?authuser=1#scrollTo=pT_mjeDH2pju">Colab</a>
+            <p> 
+                <a href="https://colab.research.google.com/drive/1QmVb4-bCPeYsy09S1cZ6pjbBVrWGwqO3?authuser=1#scrollTo=pT_mjeDH2pju">Colab 2</a>
             </p>
             <div class="chart" id="Chart22"></div>
             
