--- a/portfolio.html
+++ b/portfolio.html
@@ -149,12 +149,13 @@
               For fear of word limit; very aware of OVB etc in the regression.
               Rsq of 0.12 shows a weak correlation between GDP per capita and % of electricty generated from fossil fuels.
             //
-               <a href="https://colab.research.google.com/drive/1NxsmLV00L0ES-PSmDLstEK0KiGd_UO2P?authuser=1#scrollTo=ARXzGyUrEZxO">Colab</a>
+               <a href="https://colab.research.google.com/drive/1NxsmLV00L0ES-PSmDLstEK0KiGd_UO2P?authuser=1#scrollTo=ARXzGyUrEZxO">Supervised Colab</a>
 
             </p>
             <div class="chart" id="Chart23"></div>
             <p>Screenshot of Colab graph before restricting domain (Rsq=0.0018). I did this due to the skew from countries such as Qatar ("exceptional" access to fossil fuels, very high GDP)</p>
             <img src ="Week10/ColabRegression.png" height="360" style = "max-width: 90%;">
+            
 
             <h3>Unsupervised Learning</h3>
             <p>
