--- a/portfolio.html
+++ b/portfolio.html
@@ -131,7 +131,7 @@
             <h3>Advanced Charts</h3>
             <p>Created for use in my Project</p>
             <p>
-                <a href="https://colab.research.google.com/drive/1ez5rJMals7YDcF4HWeQ4g7NPV_OouLSu?authuser=1'>Colab 1</a>
+                <a href="https://colab.research.google.com/drive/1ez5rJMals7YDcF4HWeQ4g7NPV_OouLSu?authuser=1">Colab 1</a>
             </p>
             <div class="chart" id="Chart21"></div>
             <p> 
@@ -167,7 +167,7 @@
             </p>
             <img src = "Week10/Dendogram.png" height="400" style = "max-width: 90%;">
             <p>
-                <a href="https://colab.research.google.com/drive/10FcwkN9f1ExL6hrMBw9VKtHLdLC9VJFg?authuser=1'>Unsupervised Colab</a>
+                <a href="https://colab.research.google.com/drive/10FcwkN9f1ExL6hrMBw9VKtHLdLC9VJFg?authuser=1">Unsupervised Colab</a>
             </p>
 
         </div>
