--- a/project.html
+++ b/project.html
@@ -92,7 +92,7 @@
             <button class="button4" onclick="location.href = 'https://colab.research.google.com/drive/1QmVb4-bCPeYsy09S1cZ6pjbBVrWGwqO3?authuser=1'">Colab</button>
         </div>   
         
-        <p> I chose to use a trellis graph to allow easy comparison between the goods. I made the trellis two columns for mobile compatability. Like Week 5 in the Homework, for some reason the data does not display in Safari.
+        <p> I chose to use a trellis graph to allow easy comparison between the goods. I made the trellis two columns for mobile compatibility. Like Week 5 in the Homework, for some reason the data does not display in Safari.
             I used a loop to first extract the data from the API and then create a new dataframe for each series that would then be appended to a master dataframe.
         </p>
         <div class="chart" id="Chart5"></div>
