--- a/portfolio.html
+++ b/portfolio.html
@@ -84,6 +84,7 @@
             <h2>Week 5 Homework</h2>
             <p>Week 5 Homework: 
                 <a href="https://colab.research.google.com/drive/1wv-_GI0AH03wP6VEIGsLczw9j_9ToEQs?authuser=1">Colab</a>
+               I am aware the data does not load in safari browsers but was not sure how to fix it.
             </p>
             <div class="chart" id="Chart8"></div>
             <div class="chart" id="Chart9"></div>
